src/css/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .scroll-y-hidden {
    -ms-overflow-style: none; /* for Internet Explorer, Edge */
    scrollbar-width: none; /* for Firefox */
    overflow-y: scroll;
  }

  .scroll-y-hidden::-webkit-scrollbar {
    display: none; /* for Chrome, Safari, and Opera */
  }

  .scroll-x-hidden {
    -ms-overflow-style: none; /* for Internet Explorer, Edge */
    scrollbar-width: none; /* for Firefox */
    overflow-x: scroll;
  }

  .scroll-x-hidden::-webkit-scrollbar {
    display: none; /* for Chrome, Safari, and Opera */
  }

  .selected-tab {
    @apply border-trello-blue-100 border-current;
  }

  .overflow-wrap {
    overflow-wrap: break-word;
  }

  .list-height {
    height: min-content;
    max-height: 85%;
  }

  .height-min-content {
    height: min-content;
  }
}

